# RobotDance

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.ja.md  README.md  plan.md  pyproject.toml
docs/: EMBODIMENTS.md  POSE_BACKENDS.md  RELATED_WORK.md  ROADMAP.md  SIM_TO_REAL.md
notebooks/: quickstart.ipynb
robotdance_benchmarks/: README.md  assisted_survival.py  battle.py  battle_leaderboard.py  extraction.py  fight_scoring_compare.py  fight_tournament.py  real_motions.py  report.py  suite.py
robotdance_core/: README.md  cli.py  model_card.py  rd_mir.py  rd_motion.py  semantics.py  synthetic.py
robotdance_data/: README.md  aist.py  babel.py  dataset.py  hf_fetch.py  humanml3d.py  smpl.py
robotdance_models/: README.md  contrastive.py  encoder.py  text.py  text2motion.py  tracking_policy.py  train.py
robotdance_motion/: README.md  dedupe.py  depth_stabilize.py  doctor.py  embeddings.py  fight_refinement.py  smoothing.py
robotdance_perception/: README.md  backends.py  compare.py  gvhmr_backend.py  hmr.py  lifting.py  mediapipe_adapter.py
robotdance_retarget/: README.md  actuator_ik.py  backends.py  dispatch.py  embodiment.py  gmr_backend.py  kinematic.py
robotdance_ros2/: README.md  motion_server.py  motion_server_node.py  safety_guard.py
robotdance_sim/: README.md  arena.py  assisted_playback.py  fight_moves.py  fight_tracking.py  mesh_render.py  mjcf.py  mujoco_backend.py  reference_quality.py  sparring.py  tracking_env.py
robotdance_unitree/: README.md  __init__.py  fourier_n1.py  g1.py  h1.py  h2.py  urdf_import.py
robotdance_viewer/: balance_view.py  motion_map.py  overlay.py  skeleton_view.py
scripts/: compare_pose_backends.py  make_hero_gif.py  render_gallery.py  render_lift_vs_native_robot.py  render_real_video_gif.py  render_robot_gif.py
tests/: test_actuator_ik.py  test_arena.py  test_assisted_playback.py  test_assisted_survival.py  test_battle.py  test_battle_leaderboard.py  test_benchmark.py  test_contrastive.py  test_data.py  test_dedupe.py  test_depth_stabilize.py  test_doctor.py  test_embeddings.py  test_encoder.py  test_extraction_benchmark.py  test_fight_hud.py  test_fight_moves.py  test_fight_refinement.py  test_fight_scoring_compare.py  test_fight_tournament.py  test_fight_tracking.py  test_gmr_backend.py  test_gvhmr_backend.py  test_hf_fetch.py  test_hmr.py  test_lifting.py  test_make_hero_gif.py  test_mesh_render.py  test_model_card.py  test_multi_embodiment.py  test_perception.py  (+20 more)
(+15 files in other folders)
