[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotdance"
version = "0.118.0"
description = "Human Video to Humanoid Motion Compiler — converts legally available human videos into humanoid motion datasets, embeddings, policies, and robot-executable motions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "RobotDance contributors" }]
keywords = [
    "humanoid",
    "motion-capture",
    "retargeting",
    "robotics",
    "ros2",
    "unitree",
    "human-pose",
    "motion-dataset",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# 中核は最小依存に保つ。pose / sim / ros2 等の重い依存は optional extras に分離する。
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.6",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# 合成モーション生成（FK）+ スケルトン GIF ビューア。pose モデル不要のデモ経路。
demo = [
    "scipy>=1.10",
    "matplotlib>=3.7",
    "imageio>=2.30",
]
# local video → RD-MIR（MediaPipe Pose）。
perception = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
]
# MuJoCo 物理ベースの feasibility 検証（sim_certificate）。
sim = [
    "mujoco>=3.0",
    "scipy>=1.10",
]
# 学習 motion encoder（masked motion modeling）。CI には含めない（重いため）。
learn = [
    "torch>=2.0",
]
ros2 = []        # ROS2 は colcon / ament 管理のため別ワークスペース想定
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "imageio>=2.30",
    "mujoco>=3.0",
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "scikit-image>=0.22",
]

[project.scripts]
robotdance = "robotdance_core.cli:main"

[project.urls]
Homepage = "https://github.com/rsasaki0109/RobotDance"
Specifications = "https://github.com/rsasaki0109/RobotDance/tree/main/specs"

# monorepo: 各 robotdance_* を namespace なしのトップレベルパッケージとして配置
[tool.hatch.build.targets.wheel]
packages = [
    "robotdance_core",
    "robotdance_data",
    "robotdance_perception",
    "robotdance_motion",
    "robotdance_retarget",
    "robotdance_sim",
    "robotdance_models",
    "robotdance_ros2",
    "robotdance_unitree",
    "robotdance_benchmarks",
    "robotdance_viewer",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
